--- a/pure-indonesian.html
+++ b/pure-indonesian.html
@@ -1,40 +1,60 @@
 <!DOCTYPE html>
 <html class="full-height" lang="en-US">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Pojokan.io - Pure Indonesian</title>
-    <meta name="description"
-        content="Pojokan.io - Pure Indonesian - Self managed and curated by Indonesian best talents" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <title>Pojokan.dev - Pure Indonesian</title>
+    <meta
+      name="description"
+      content="Pojokan.dev - Pure Indonesian - Self managed and curated by Indonesian best talents"
+    />
     <link rel="icon" href="/img/icon2.ico" />
     <link rel="stylesheet" href="/css/main.css" />
     <script type="text/javascript" src="/js/main.js"></script>
-</head>
+  </head>
 
-<body id="top">
+  <body id="top">
     <!-- Navbar-->
-    <nav data-include="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top top-nav-collapse" id="navbar"></nav>
+    <nav
+      data-include="navbar"
+      class="navbar navbar-expand-lg navbar-dark fixed-top top-nav-collapse"
+      id="navbar"
+    ></nav>
 
     <div id="sub-content">
-        <section class="py-5">
-            <div class="container">
-                <div class="row mb-4">
-                    <div class="col-md-12 text-center wow fadeInDown">
-                        <picture>
-                            <source srcset="img/Pojokan-Project-Tutorial-System.webp" type="image/webp" />
-                            <source srcset="img/Pojokan-Project-Tutorial-System.png" type="image/png" />
-                            <img loading="lazy" title="Pojokan Project Tutorial System" class="responsive-image" />
-                        </picture>
-                    </div>
-                </div>
-                <div data-include="pure-indonesian-content"></div>
+      <section class="py-5">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col-md-12 text-center wow fadeInDown">
+              <picture>
+                <source
+                  srcset="img/Pojokan-Project-Tutorial-System.webp"
+                  type="image/webp"
+                />
+                <source
+                  srcset="img/Pojokan-Project-Tutorial-System.png"
+                  type="image/png"
+                />
+                <img
+                  loading="lazy"
+                  title="Pojokan Project Tutorial System"
+                  class="responsive-image"
+                />
+              </picture>
             </div>
-        </section>
+          </div>
+          <div data-include="pure-indonesian-content"></div>
+        </div>
+      </section>
     </div>
 
-    <footer data-include="footer" class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0"></footer>
-</body>
-
+    <footer
+      data-include="footer"
+      class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0"
+    ></footer>
+  </body>
 </html>
