--- a/business-oriented.html
+++ b/business-oriented.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html class="full-height" lang="en-US">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Pojokan.io - Business Oriented</title>
-    <meta name="description" content="Pojokan.io - Business Oriented - Customisation business model" />
-    <link rel="icon" href="img/icon2.ico">
-    <link rel="stylesheet" href="/css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <title>Pojokan.dev - Business Oriented</title>
+    <meta
+      name="description"
+      content="Pojokan.dev - Business Oriented - Customisation business model"
+    />
+    <link rel="icon" href="img/icon2.ico" />
+    <link rel="stylesheet" href="/css/main.css" />
     <script type="text/javascript" src="/js/main.js"></script>
-</head>
+  </head>
 
-<body id="top">
+  <body id="top">
     <!-- Navbar-->
-    <nav data-include="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top top-nav-collapse" id="navbar">
-    </nav>
+    <nav
+      data-include="navbar"
+      class="navbar navbar-expand-lg navbar-dark fixed-top top-nav-collapse"
+      id="navbar"
+    ></nav>
 
     <div id="sub-content">
-        <section class="py-5">
-            <div class="container">
-                <div class="row mb-4">
-                    <div class="col-md-12 text-center wow fadeInDown">
-                        <picture>
-                            <source srcset="img/Site-Map.webp" type="image/webp">
-                            <source srcset="img/Site-Map.png" type="image/png">
-                            <img loading="lazy" title="Site Map" class="responsive-image">
-                        </picture>
-                    </div>
-                </div>
-                <div data-include="business-oriented-content">
-                </div>
+      <section class="py-5">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col-md-12 text-center wow fadeInDown">
+              <picture>
+                <source srcset="img/Site-Map.webp" type="image/webp" />
+                <source srcset="img/Site-Map.png" type="image/png" />
+                <img loading="lazy" title="Site Map" class="responsive-image" />
+              </picture>
             </div>
-        </section>
-
+          </div>
+          <div data-include="business-oriented-content"></div>
+        </div>
+      </section>
     </div>
 
-    <footer data-include="footer" class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0">
-    </footer>
-
-</body>
-
+    <footer
+      data-include="footer"
+      class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0"
+    ></footer>
+  </body>
 </html>
