--- a/index.html
+++ b/index.html
@@ -1,63 +1,74 @@
 <!DOCTYPE html>
 <html class="full-height" lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <title>Pojokan.dev</title>
+    <meta
+      name="description"
+      content="Pojokan.dev - Largest yet most efficient business oriented technology company in Indonesia"
+    />
+    <link rel="icon" href="/img/icon2.ico" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <script type="text/javascript" src="/js/main.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Pojokan.io</title>
-  <meta name="description"
-    content="Pojokan.io - Largest yet most efficient business oriented technology company in Indonesia" />
-  <link rel="icon" href="/img/icon2.ico">
-  <link rel="stylesheet" href="/css/main.css">
-  <script type="text/javascript" src="/js/main.js"></script>
-</head>
+  <body id="top">
+    <header>
+      <!-- Navbar-->
+      <nav
+        data-include="navbar"
+        class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar"
+        id="navbar"
+      ></nav>
 
-<body id="top">
-
-  <header>
-
-    <!-- Navbar-->
-    <nav data-include="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" id="navbar">
-    </nav>
-
-    <!-- Intro Section-->
-    <section class="view hm-gradient" id="intro">
-      <div class="full-bg-img d-flex align-items-center">
-        <div class="container">
-          <div class="row no-gutters">
-            <div class="col-md-10 col-lg-6 text-center text-md-left margins">
-              <div class="white-text" data-include="mission">
+      <!-- Intro Section-->
+      <section class="view hm-gradient" id="intro">
+        <div class="full-bg-img d-flex align-items-center">
+          <div class="container">
+            <div class="row no-gutters">
+              <div class="col-md-10 col-lg-6 text-center text-md-left margins">
+                <div class="white-text" data-include="mission"></div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-  </header>
+      </section>
+    </header>
 
-  <div id="content">
-    <section class="text-center py-5 grey lighten-4" id="about-us" data-include="about-us">
-    </section>
+    <div id="content">
+      <section
+        class="text-center py-5 grey lighten-4"
+        id="about-us"
+        data-include="about-us"
+      ></section>
 
-    <section class="py-5" id="our-strategies">
-      <div class="container">
-        <div class="wow fadeIn" data-include="strategies">
+      <section class="py-5" id="our-strategies">
+        <div class="container">
+          <div class="wow fadeIn" data-include="strategies"></div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="row no-gutters" id="features" data-include="vision">
-    </section>
+      <section
+        class="row no-gutters"
+        id="features"
+        data-include="vision"
+      ></section>
 
-    <section id="contact-us" class="contact-us" data-include="contact-us">
-    </section>
+      <section
+        id="contact-us"
+        class="contact-us"
+        data-include="contact-us"
+      ></section>
+    </div>
 
-  </div>
-
-  <footer data-include="footer" class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0">
-  </footer>
-
-</body>
-
+    <footer
+      data-include="footer"
+      class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0"
+    ></footer>
+  </body>
 </html>
