--- a/out-of-the-box.html
+++ b/out-of-the-box.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html class="full-height" lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <title>Pojokan.dev - Out of the box</title>
+    <meta
+      name="description"
+      content="Pojokan.dev - Out of the box - Breakthough and out of the box products"
+    />
+    <link rel="icon" href="/img/icon2.ico" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <script type="text/javascript" src="/js/main.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <title>Pojokan.io - Out of the box</title>
-  <meta name="description" content="Pojokan.io - Out of the box - Breakthough and out of the box products" />
-  <link rel="icon" href="/img/icon2.ico" />
-  <link rel="stylesheet" href="/css/main.css" />
-  <script type="text/javascript" src="/js/main.js"></script>
-</head>
+  <body id="top">
+    <!-- Navbar-->
+    <nav
+      data-include="navbar"
+      class="navbar navbar-expand-lg navbar-dark fixed-top top-nav-collapse"
+      id="navbar"
+    ></nav>
 
-<body id="top">
-  <!-- Navbar-->
-  <nav data-include="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top top-nav-collapse" id="navbar"></nav>
-
-  <div id="sub-content">
-    <section class="py-5">
-      <div class="container">
-        <div class="row mb-4">
-          <div class="col-md-12 text-center wow fadeInDown">
-            <picture>
-              <source srcset="img/Company-Profile-Flow.webp" type="image/webp">
-              <source srcset="img/Company-Profile-Flow.png" type="image/png">
-              <img loading="lazy" alt="Company Profile Flow" class="responsive-image">
-            </picture>
+    <div id="sub-content">
+      <section class="py-5">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col-md-12 text-center wow fadeInDown">
+              <picture>
+                <source
+                  srcset="img/Company-Profile-Flow.webp"
+                  type="image/webp"
+                />
+                <source
+                  srcset="img/Company-Profile-Flow.png"
+                  type="image/png"
+                />
+                <img
+                  loading="lazy"
+                  alt="Company Profile Flow"
+                  class="responsive-image"
+                />
+              </picture>
+            </div>
           </div>
+          <div data-include="out-of-the-box"></div>
         </div>
-        <div data-include="out-of-the-box"></div>
-      </div>
-    </section>
-  </div>
+      </section>
+    </div>
 
-  <footer data-include="footer" class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0"></footer>
-</body>
-
+    <footer
+      data-include="footer"
+      class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0"
+    ></footer>
+  </body>
 </html>
